Add @Override and minor improvements